WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82917
[Qt][WK2] ResourceError::isCancellation() is always returning false
https://bugs.webkit.org/show_bug.cgi?id=82917
Summary
[Qt][WK2] ResourceError::isCancellation() is always returning false
Jesus Sanchez-Palencia
Reported
2012-04-02 11:24:29 PDT
We are missing the encoding of a boolean in ArgumentCoder<ResourceError> and, therefore, we always get the default value (false) for ResourceError::isCancellation() with errors being sent through the IPC. This is impacting directly the implementation of QtWebPageLoadClient::dispatchLoadFailed, line 95.
Attachments
Patch
(2.25 KB, patch)
2012-04-02 11:45 PDT
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2012-04-02 11:45:38 PDT
Created
attachment 135142
[details]
Patch
Jesus Sanchez-Palencia
Comment 2
2012-04-02 12:46:55 PDT
Comment on
attachment 135142
[details]
Patch Clearing flags on attachment: 135142 Committed
r112921
: <
http://trac.webkit.org/changeset/112921
>
Jesus Sanchez-Palencia
Comment 3
2012-04-02 12:47:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug