[Qt][WK2] ResourceError::isCancellation() is always returning false https://bugs.webkit.org/show_bug.cgi?id=82917

Reviewed by Noam Rosenthal.

We were missing the encoding of a boolean in ArgumentCoder<ResourceError>
and, therefore, we were getting always "false" for ResourceError::isCancellation()
for errors being sent through the IPC.

* Shared/qt/WebCoreArgumentCodersQt.cpp:
(CoreIPC::::encode):
(CoreIPC::::decode):

Canonical link: https://commits.webkit.org/100280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112921 268f45cc-cd09-0410-ab3c-d52691b4dbfc